k8s-deployment/kube-system/ingress-controller.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: ingress-controller
  labels:
    k8s-app: ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ingress-controller
  template:
    metadata:
      labels:
        k8s-app: ingress-controller
    spec:
      serviceAccountName: ingress-controller
      containers:
      - name: ingress-controller
        image: traefik:alpine
        args: [--configfile=/config/traefik.toml]
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: ingress-controller

---
kind: Service
apiVersion: v1
metadata:
  name: ingress-controller
spec:
  selector:
    k8s-app: ingress-controller
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 32222

---
kind: Service
apiVersion: v1
metadata: {name: traefik}
spec:
  selector: {k8s-app: ingress-controller}
  ports: [port: 8080]
