k8s-deployment/kube-system/ingress-rules.yml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: basic-auth
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "ingress-basic-auth"
spec:
  rules:
  - host: t16r.bouvet.no
    http:
      paths:
      - backend:
          serviceName: traefik
          servicePort: 80
